Adjustments for shop.component.html

--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center w-full mt-4">
-  <div class="filters-container w-full" style="z-index: 1;">
+  <div class="filters-container mx-auto w-full" style="z-index: 1;">
     <app-filters (filtersChange)="onFiltersChange($event)" class="w-full"></app-filters>
   </div>
   <div class="main-content mt-4 w-full max-w-7xl">
