--- a/src/app/components/shop/filters/filters.component.html
+++ b/src/app/components/shop/filters/filters.component.html
@@ -1,15 +1,16 @@
 <div class="flex justify-center flex-col items-center">
-  <div class="flex gap-8 mb-4">
+  <div class="sm:flex gap-8 mb-4">
+    <!-- Painting Type Filter -->
     <div class="relative group">
-      <div class="flex cursor-pointer items-center gap-2 border-b border-gray-400 pb-1 text-gray-900 transition hover:border-gray-600">
+      <div (click)="togglePaintingTypeDropdown()" class="flex cursor-pointer items-center gap-2 border-b border-gray-400 pb-1 text-gray-900 transition hover:border-gray-600">
         <span class="text-sm font-medium"> Painting Type </span>
-        <span class="transition group-hover:-rotate-180">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-          </svg>
-        </span>
+        <span class="transition" [ngClass]="{'-rotate-180': paintingTypeDropdownOpen}">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+      </svg>
+    </span>
       </div>
-      <div class="z-50 hidden group-hover:block absolute left-0 top-full mt-0 w-96 rounded border border-gray-200 bg-white">
+      <div class="z-50 absolute left-0 top-full mt-0 w-96 rounded border border-gray-200 bg-white" [ngClass]="{'hidden': !paintingTypeDropdownOpen, 'block': paintingTypeDropdownOpen}">
         <ul class="space-y-1 border-t border-gray-200 p-4">
           <li>
             <label for="oil" class="inline-flex items-center gap-2">
@@ -32,18 +33,20 @@
         </ul>
       </div>
     </div>
+
+    <!-- Price Filter -->
     <div class="relative group">
-      <div class="flex cursor-pointer items-center gap-2 border-b border-gray-400 pb-1 text-gray-900 transition hover:border-gray-600">
+      <div (click)="togglePriceDropdown()" class="flex cursor-pointer items-center gap-2 border-b border-gray-400 pb-1 text-gray-900 transition hover:border-gray-600">
         <span class="text-sm font-medium"> Price </span>
-        <span class="transition group-hover:-rotate-180">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-          </svg>
-        </span>
+        <span class="transition group-hover:-rotate-180" [ngClass]="{'-rotate-180': priceDropdownOpen}">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-4 w-4">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+      </svg>
+    </span>
       </div>
-      <div class="z-50 hidden group-hover:block absolute left-0 top-full mt-0 w-96 rounded border border-gray-200 bg-white">
+      <div class="z-50 absolute left-0 top-full mt-0 w-96 rounded border border-gray-200 bg-white" [ngClass]="{'hidden': !priceDropdownOpen, 'block': priceDropdownOpen}">
         <div class="border-t border-gray-200 p-4">
-          <div class="flex justify-between gap-4">
+          <div class="flex sm:flex-row justify-between gap-4">
             <label for="FilterPriceFrom" class="flex items-center gap-2">
               <span class="text-sm text-gray-600">$</span>
               <input type="number" id="FilterPriceFrom" placeholder="From" class="w-full rounded-md border-gray-200 shadow-sm sm:text-sm" [(ngModel)]="filters.priceFrom" (input)="onInputChange('priceFrom', $event)" />
