--- a/src/app/components/shop/product-list/product-list.component.html
+++ b/src/app/components/shop/product-list/product-list.component.html
@@ -1,9 +1,9 @@
-<div class="main-content grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4">
-  <div class="card shadow-sm" *ngFor="let painting of filteredPaintings" (click)="painting.id && viewPainting(painting.id)">
-    <img class="card-img-top img-fluid w-full h-64 object-cover" [src]="painting.imageUrl" alt="{{ painting.name }}">
-    <div class="card-body d-flex flex-column p-4">
-      <p class="card-text text-lg font-semibold">{{ painting.name }}</p>
-      <div class="mt-auto d-flex justify-content-between align-items-center">
+<div class="container grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4">
+  <div class="shadow-sm" *ngFor="let painting of filteredPaintings" (click)="painting.id && viewPainting(painting.id)">
+    <img class="md:flex-1 w-full h-64 object-cover" [src]="painting.imageUrl" alt="{{ painting.name }}">
+    <div class="flex flex-col p-4">
+      <p class="text-lg font-semibold">{{ painting.name }}</p>
+      <div class="mt-auto flex justify-between items-center">
         <small class="text-muted">{{ painting.price | currency:'EUR' }}</small>
       </div>
     </div>
