--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,12 +2,12 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
     <div class="card shadow-sm" *ngFor="let painting of paintings">
       <img
-        class="card-img-top img-fluid h-auto object-cover"
+        class="w-full"
         [src]="painting.imageUrl"
         alt="{{ painting.name }}"
       />
-      <div class="card-body flex flex-col p-4">
-        <p class="card-text text-lg font-semibold">{{ painting.name }}</p>
+      <div class="flex flex-col p-4">
+        <p class="text-lg font-semibold">{{ painting.name }}</p>
         <div class="mt-1 flex justify-between items-center">
           <small class="text-muted">{{ painting.price | currency:'USD':'symbol' }}</small>
         </div>
