--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,9 +1,8 @@
 <app-stepper></app-stepper>
-<div class="container mx-auto p-6">
-  <div class="flex flex-col lg:flex-row justify-between space-x-4">
+<div class="container mx-auto lg:p-6">
+  <h1 class="text-3xl font-bold text-black m-4">Cart</h1>
+  <div class="flex flex-col lg:flex-row lg:space-x-4">
     <div class="w-full lg:w-2/3">
-
-      <h1 class="text-3xl font-bold text-black mb-6">Cart</h1>
       <div *ngFor="let item of cartItems" class="bg-white p-4 rounded-lg shadow-md mb-6">
         <div class="flex items-center mb-4">
           <img [src]="item.imageUrl" [alt]="item.productName" class="w-40 h-50 object-cover rounded-md mr-4">
@@ -11,24 +10,24 @@
             <h2 class="text-xl font-semibold text-black">{{ item.productName }}</h2>
             <p class="text-gray-500">$ {{ item.price }}</p>
           </div>
-          <div class="flex items-center">
+          <div class="flex flex-row lg:items-center">
             <button (click)="decrementQuantity(item)" class="border px-2 py-1">-</button>
-            <span class="px-4 text-black">{{ item.quantity }}</span>
+            <span class="px-4 mt-1.5 lg:m-0 text-black">{{ item.quantity }}</span>
             <button (click)="incrementQuantity(item)" class="border px-2 py-1">+</button>
+            <button (click)="removeItem(item.productId)" class="ml-4 text-red-500">x</button>
           </div>
-          <div class="ml-4">
-            <p class="text-lg font-semibold text-black">Total: $ {{ item.price * item.quantity }}</p>
-          </div>
-          <button (click)="removeItem(item.productId)" class="ml-4 text-red-500">x</button>
         </div>
       </div>
     </div>
 
-    <div class="w-full lg:w-1/3 bg-white p-6 rounded-lg shadow-md">
+    <div class="w-full lg:w-1/3 p-5 bg-white rounded-lg shadow-md">
       <h2 class="text-2xl font-semibold text-black mb-6">Order Summary</h2>
       <div class="flex justify-between text-black mb-4">
         <span>Subtotal</span>
-        <span>$ {{ totalAmount }}</span>
+        <div *ngFor="let item of cartItems" class="align-right">
+          <p class="text-xl font-semibold text-black">{{ item.productName }}</p>
+          <p class="text-gray-500">$ {{ item.price }}</p>
+        </div>
       </div>
       <div class="border-t pt-4">
         <div class="flex justify-between text-xl font-semibold text-black">
@@ -37,11 +36,22 @@
         </div>
       </div>
       <div class="promo-code mt-6">
-        <input type="text" placeholder="Please enter promo code" [(ngModel)]="promoCode" class="border p-2 w-full rounded mb-4">
+        <input type="text" placeholder="Please enter promo code" [(ngModel)]="promoCode"
+               class="border outline-none p-2 w-full rounded-lg mb-4">
       </div>
-      <div class="flex flex-col items-center space-y-4">
-        <button (click)="applyDiscount()" [disabled]="isDiscountApplied" class="w-1/3 bg-gray-400 text-gray-100 px-2 py-1 rounded hover:bg-gray-400">Apply Discount</button>
-        <a routerLink="/checkout" class="w-1/3 bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Proceed to checkout</a>
+      <div class="grid grid-cols-1 justify-items-center mt-3">
+        <div>
+          <button (click)="applyDiscount()" [disabled]="isDiscountApplied"
+                  class="w-48 bg-gray-500 text-white py-1.5 px-3 hover:bg-gray-600 text-center rounded-lg mb-2">
+            Apply Discount
+          </button>
+        </div>
+        <div>
+          <button routerLink="/checkout"
+                  class="w-48 bg-gray-600 text-white py-1.5 px-3 hover:bg-gray-700 text-center rounded-lg mb-2">
+            Proceed to checkout
+          </button>
+        </div>
       </div>
     </div>
   </div>
