--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -10,7 +10,7 @@
             <h3 class="text-lg font-bold text-black">Contact Information</h3>
             <label for="email" class="block text-sm font-medium text-black">Email address</label>
             <input type="email" id="email" formControlName="email"
-                   class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+                   class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
             <div *ngIf="checkoutForm.get('email')?.invalid && (checkoutForm.get('email')?.touched || formSubmitted)"
                  class="text-red-600 text-sm mt-1">
               Please enter a valid email address.
@@ -20,7 +20,7 @@
             <div>
               <label for="firstName" class="block text-sm font-medium text-black">First name</label>
               <input type="text" id="firstName" formControlName="firstName"
-                     class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
               <div
                 *ngIf="checkoutForm.get('firstName')?.invalid && (checkoutForm.get('firstName')?.touched || formSubmitted)"
                 class="text-red-600 text-sm mt-1">
@@ -30,7 +30,7 @@
             <div>
               <label for="lastName" class="block text-sm font-medium text-black">Last name</label>
               <input type="text" id="lastName" formControlName="lastName"
-                     class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
               <div
                 *ngIf="checkoutForm.get('lastName')?.invalid && (checkoutForm.get('lastName')?.touched || formSubmitted)"
                 class="text-red-600 text-sm mt-1">
@@ -41,9 +41,9 @@
           <h3 class="text-lg font-bold text-black">Shipping Address</h3>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
             <div>
-              <label for="country" class="block text-sm font-medium text-black">Country</label>
+              <label for="country" class="block p-1 outline-none text-sm font-medium text-black">Country</label>
               <select id="country" formControlName="country"
-                      class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm"
+                      class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm"
                       (change)="onCountryChange($event)">
                 <option>Select country</option>
                 <option *ngFor="let country of countries">{{ country }}</option>
@@ -55,9 +55,9 @@
               </div>
             </div>
             <div>
-              <label for="state" class="block text-sm font-medium text-black">State / Province</label>
+              <label for="state" class="block p-1 outline-none text-sm font-medium text-black">State / Province</label>
               <input type="text" id="state" formControlName="state"
-                     class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
               <div *ngIf="checkoutForm.get('state')?.invalid && (checkoutForm.get('state')?.touched || formSubmitted)"
                    class="text-red-600 text-sm mt-1">
                 State / Province is required.
@@ -68,7 +68,7 @@
             <div class="md:col-span-2">
               <label for="address" class="block text-sm font-medium text-black">Address</label>
               <input type="text" id="address" formControlName="address"
-                     class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
               <div
                 *ngIf="checkoutForm.get('address')?.invalid && (checkoutForm.get('address')?.touched || formSubmitted)"
                 class="text-red-600 text-sm mt-1">
@@ -78,38 +78,38 @@
             <div>
               <label for="apartmentNumber" class="block text-sm font-medium text-black">Apartment number</label>
               <input type="text" id="apartmentNumber" formControlName="apartmentNumber"
-                     class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
             </div>
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
             <div>
-              <label for="city" class="block text-sm font-medium text-black">City</label>
+              <label for="city" class="block p-1 outline-none text-sm font-medium text-black">City</label>
               <input type="text" id="city" formControlName="city"
-                     class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
               <div *ngIf="checkoutForm.get('city')?.invalid && (checkoutForm.get('city')?.touched || formSubmitted)"
                    class="text-red-600 text-sm mt-1">
                 City is required.
               </div>
             </div>
             <div>
-              <label for="zip" class="block text-sm font-medium text-black">Postal code</label>
+              <label for="zip" class="p-1 outline-none block text-sm font-medium text-black">Postal code</label>
               <input type="text" id="zip" formControlName="zip"
-                     class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
               <div *ngIf="checkoutForm.get('zip')?.invalid && (checkoutForm.get('zip')?.touched || formSubmitted)"
                    class="text-red-600 text-sm mt-1">
                 Postal code is required.
               </div>
             </div>
           </div>
-          <div class="grid grid-cols-2 gap-4 mb-6">
-            <div class="col-span-1">
+          <div class="grid grid-cols-1 justify-items-center">
+            <div>
               <a href="/cart"
-                 class="w-full block bg-gray-500 text-gray-100 py-4 px-3 sm:py-1 hover:bg-gray-500 text-center rounded-xl">Back to
+                 class="w-48 block bg-gray-500 text-gray-100 py-1.5 px-3 transition hover:bg-gray-700 text-center rounded-lg mb-2">Back to
                 cart</a>
             </div>
-            <div class="col-span-1">
+            <div>
               <button type="submit"
-                      class="w-full bg-gray-600 text-gray-100 py-4 px-3  sm:py-1 hover:bg-gray-500 text-center rounded-xl">Proceed
+                      class="w-48 block bg-gray-600 text-white py-1.5 px-3 transition hover:bg-gray-700 text-center rounded-lg mb-2">Proceed
                 to payment
               </button>
             </div>
