--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -3,7 +3,7 @@
   <div class="content container mx-auto p-4 max-w-4xl">
     <h1 class="text-3xl font-bold text-black mb-4">Payment Information</h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <div class="md:col-span-2">
+      <div class="md:col-span-2 p-2 shadow-md">
         <div class="mb-6">
           <h3 class="text-lg font-bold text-black py-3">Contact Information</h3>
           <p class="text-sm text-black"><strong>Email address:</strong> {{ email }}</p>
@@ -41,8 +41,8 @@
             <p class="text-sm text-black"><strong>Postal code:</strong> {{ zip }}</p>
           </div>
         </div>
-        <div class="grid grid-cols-2 gap-4 mb-6">
-          <div class="col-span-1">
+        <div class="grid grid-cols-1 justify-items-center mt-3">
+          <div>
             <a [routerLink]="['/checkout']"
                [queryParams]="{
                   email: email,
@@ -55,12 +55,12 @@
                   city: city,
                   zip: zip
                }"
-               class="w-full block bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Back to
+               class="w-48 block bg-gray-600 text-white py-1.5 px-3 hover:bg-gray-700 text-center rounded-lg mb-2">Back to
               checkout</a>
 
           </div>
-          <div class="col-span-1">
-            <button (click)="proceedToPayment()" class="w-full bg-red-600 text-white py-1 px-3 hover:bg-red-700 text-center rounded">Pay with payU</button>
+          <div>
+            <button (click)="proceedToPayment()" class="w-48 bg-red-600 text-white py-1.5 px-3 hover:bg-red-700 text-center rounded-lg mb-2">Pay with payU</button>
           </div>
         </div>
       </div>
