Changed gallery images

--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -5,24 +5,24 @@
         <img
           alt="gallery"
           class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
-          src="https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp"
-          (click)="openLightbox('https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp')"
+          src="assets/gallery/2005-09.jpg"
+          (click)="openLightbox('assets/gallery/2005-09.jpg')"
         />
       </div>
       <div class="w-1/2 p-1 md:p-2">
         <img
           alt="gallery"
           class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
-          src="https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp"
-          (click)="openLightbox('https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp')"
+          src="assets/gallery/2005-zkwiatem.jpg"
+          (click)="openLightbox('assets/gallery/2005-zkwiatem.jpg')"
         />
       </div>
       <div class="w-full p-1 md:p-2">
         <img
           alt="gallery"
           class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
-          src="https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
-          (click)="openLightbox('https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp')"
+          src="assets/gallery/2007-0018.jpg"
+          (click)="openLightbox('assets/gallery/2007-0018.jpg')"
         />
       </div>
     </div>
@@ -31,24 +31,84 @@
         <img
           alt="gallery"
           class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
-          src="https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp"
-          (click)="openLightbox('https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp')"
+          src="assets/gallery/kbis01.jpg"
+          (click)="openLightbox('assets/gallery/kbis01.jpg')"
         />
       </div>
       <div class="w-1/2 p-1 md:p-2">
         <img
           alt="gallery"
           class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
-          src="https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp"
-          (click)="openLightbox('https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp')"
+          src="assets/gallery/kbis04.jpg"
+          (click)="openLightbox('assets/gallery/kbis04.jpg')"
         />
       </div>
       <div class="w-1/2 p-1 md:p-2">
         <img
           alt="gallery"
           class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
-          src="https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(77).webp"
-          (click)="openLightbox('https://tecdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(77).webp')"
+          src="assets/gallery/kbis05.jpg"
+          (click)="openLightbox('assets/gallery/kbis05.jpg')"
+        />
+      </div>
+    </div>
+    <div class="flex w-1/2 flex-wrap">
+      <div class="w-1/2 p-1 md:p-2">
+        <img
+          alt="gallery"
+          class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
+          src="assets/gallery/olej0015.jpg"
+          (click)="openLightbox('assets/gallery/olej0015.jpg')"
+        />
+      </div>
+      <div class="w-1/2 p-1 md:p-2">
+        <img
+          alt="gallery"
+          class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
+          src="assets/gallery/olej0020.jpg"
+          (click)="openLightbox('assets/gallery/olej0020.jpg')"
+        />
+      </div>
+      <div class="w-full p-1 md:p-2">
+        <img
+          alt="gallery"
+          class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
+          src="assets/gallery/olej0022.jpg"
+          (click)="openLightbox('assets/gallery/olej0022.jpg')"
+        />
+      </div>
+    </div>
+    <div class="flex w-1/2 flex-wrap">
+      <div class="w-full p-1 md:p-2">
+        <img
+          alt="gallery"
+          class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
+          src="assets/gallery/olej0041.jpg"
+          (click)="openLightbox('assets/gallery/olej0041.jpg')"
+        />
+      </div>
+      <div class="w-1/2 p-1 md:p-2">
+        <img
+          alt="gallery"
+          class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
+          src="assets/gallery/ongoly.jpg"
+          (click)="openLightbox('assets/gallery/ongoly.jpg')"
+        />
+      </div>
+      <div class="w-1/2 p-1 md:p-2">
+        <img
+          alt="gallery"
+          class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
+          src="assets/gallery/para.jpg"
+          (click)="openLightbox('assets/gallery/para.jpg')"
+        />
+      </div>
+      <div class="w-1/2 p-1 md:p-2">
+        <img
+          alt="gallery"
+          class="block h-full w-full rounded-lg object-cover object-center cursor-pointer"
+          src="assets/gallery/pimpek.jpg"
+          (click)="openLightbox('assets/gallery/pimpek.jpg')"
         />
       </div>
     </div>
