Added new logo, adjusted for mobile viewers, removed css

--- a/src/app/components/header/logo/logo.component.html
+++ b/src/app/components/header/logo/logo.component.html
@@ -1,1 +1,3 @@
-<a class="navbar-brand text-4xl text-gray-500 hover:text-gray-900 focus:outline-none py-5" href="/home">Kamila Białkowska-Ismaił</a>
+<a href="/home">
+  <img src="assets/logo.jpg" alt="Kamila Białkowska-Ismaił">
+</a>
