--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
-<footer class="bg-gray-600 text-white p-8">
+<footer class="bg-gray-300 text-black font-medium p-8">
   <div class="container mx-auto text-center">
     <div class="flex justify-center space-x-6 mb-4">
-      <a routerLink="/terms" class="text-white hover:text-gray-400">Terms</a>
-      <a routerLink="/payment-shipping" class="text-white hover:text-gray-400">Payments</a>
-      <a routerLink="/returns" class="text-white hover:text-gray-400">Returns</a>
+      <a routerLink="/terms" class="text-black font-medium hover:text-gray-700">Terms</a>
+      <a routerLink="/payment-shipping" class="text-black font-medium hover:text-gray-700">Payments</a>
+      <a routerLink="/returns" class="text-black font-medium hover:text-gray-700">Returns</a>
     </div>
     <p class="text-sm">&copy; 2024 Kamila Białkowska-Ismaił | All rights reserved</p>
   </div>
