--- a/src/app/components/shop/painting-detail/painting-detail.component.html
+++ b/src/app/components/shop/painting-detail/painting-detail.component.html
@@ -1,18 +1,147 @@
-<div *ngIf="painting" class="mx-auto py-16 lg:mt-4 lg:flex lg:justify-center">
-  <div class="lg:flex gap-6 lg:flex-col-2">
-    <div class="w-full lg:flex-col-1 lg:justify-items-center">
-      <img class="w-full p-4" [src]="painting.imageUrl" alt="{{ painting.name }}">
-    </div>
-    <div class="flex-1 w-full text-center mt-10">
-      <h2 class="text-2xl font-bold text-black mb-4">{{ painting.name }}</h2>
-      <p class="text-lg text-black mb-4">{{ painting.description }}</p>
-      <p class="price text-xl black font-bold mb-4">{{ painting.price | currency:'PLN' }}</p>
-      <button
-        class="bg-red-600 text-white py-2 px-4 rounded transition hover:bg-red-700 w-32 text-center"
-        (click)="addToCart()"
-        [disabled]="isButtonDisabled">
-        {{ buttonText }}
-      </button>
+<!--<div *ngIf="painting" class="mx-auto py-16 lg:mt-4 lg:flex lg:justify-center">-->
+<!--  <div class="lg:flex gap-6 lg:flex-col-2">-->
+<!--    <div class="w-full lg:flex-col-1 lg:justify-items-center">-->
+<!--      <img class="w-full p-4" [src]="painting.imageUrl" alt="{{ painting.name }}">-->
+<!--    </div>-->
+<!--    <div class="flex-1 w-full text-center mt-10">-->
+<!--      <h2 class="text-2xl font-bold text-black mb-4">{{ painting.name }}</h2>-->
+<!--      <p class="text-lg text-black mb-4">{{ painting.description }}</p>-->
+<!--      <p class="price text-xl black font-bold mb-4">{{ painting.price | currency:'PLN' }}</p>-->
+<!--      <button-->
+<!--        class="bg-red-600 text-white py-2 px-4 rounded transition hover:bg-red-700 w-32 text-center"-->
+<!--        (click)="addToCart()"-->
+<!--        [disabled]="isButtonDisabled">-->
+<!--        {{ buttonText }}-->
+<!--      </button>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--
+  This example requires some changes to your config:
+
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/typography'),
+      require('@tailwindcss/aspect-ratio'),
+    ],
+  }
+  ```
+-->
+<div class="bg-white">
+  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+    <div class="lg:grid lg:grid-cols-2 lg:items-start lg:gap-x-8">
+      <!-- Image gallery -->
+      <div class="flex flex-col-reverse">
+        <!-- Image selector -->
+        <div class="mx-auto mt-6 hidden w-full max-w-2xl sm:block lg:max-w-none">
+          <div class="grid grid-cols-4 gap-6" aria-orientation="horizontal" role="tablist">
+            <button id="tabs-1-tab-1"
+                    class="relative flex h-24 cursor-pointer items-center justify-center rounded-md bg-white text-sm font-medium uppercase text-gray-900 hover:bg-gray-50 focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-offset-4"
+                    aria-controls="tabs-1-panel-1" role="tab" type="button">
+              <span class="sr-only">Angled view</span>
+              <span class="absolute inset-0 overflow-hidden rounded-md">
+                <img src="{{painting?.imageUrl}}" alt="" class="h-full w-full object-cover object-center">
+              </span>
+              <!--               Selected: "ring-indigo-500", Not Selected: "ring-transparent" -->
+              <span class="pointer-events-none absolute inset-0 rounded-md ring-2 ring-transparent ring-offset-2"
+                    aria-hidden="true"></span>
+            </button>
+
+            <!-- More images... -->
+          </div>
+        </div>
+
+        <div class="aspect-h-1 aspect-w-1 w-full">
+          <!-- Tab panel, show/hide based on tab state. -->
+          <div id="tabs-1-panel-1" aria-labelledby="tabs-1-tab-1" role="tabpanel" tabindex="0">
+            <img src="{{painting?.imageUrl}}" alt="Angled front view with bag zipped and handles upright."
+                 class="h-full w-full object-cover object-center sm:rounded-lg">
+          </div>
+
+          <!-- More images... -->
+        </div>
+      </div>
+
+      <!-- Product info -->
+      <div class="mt-10 px-4 sm:mt-16 sm:px-0 lg:mt-0">
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900">{{ painting?.name }}</h1>
+
+        <div class="mt-3">
+          <h2 class="sr-only">Product information</h2>
+          <p class="text-3xl tracking-tight text-gray-900">${{ painting?.price }}</p>
+        </div>
+
+        <div class="mt-6">
+          <h3 class="sr-only">Description</h3>
+
+          <div class="space-y-6 text-base text-gray-700">
+            <p>{{ painting?.description }}</p>
+          </div>
+        </div>
+
+        <form class="mt-6">
+
+          <div class="mt-10 flex">
+            <button type="submit"
+                    class="flex max-w-xs flex-1 items-center justify-center rounded-md border border-transparent bg-gray-600 px-8 py-3 text-base font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50 sm:w-full"
+                    (click)="addToCart()"
+                    [disabled]="isButtonDisabled">{{ buttonText }}
+            </button>
+
+          </div>
+        </form>
+
+        <section aria-labelledby="details-heading" class="mt-12">
+          <h2 id="details-heading" class="sr-only">Additional details</h2>
+
+          <div class="divide-y divide-gray-200 border-t">
+            <div>
+              <h3>
+                <!-- Expand/collapse question button -->
+                <button type="button" class="group relative flex w-full items-center justify-between py-6 text-left"
+                        aria-controls="disclosure-1" (click)="toggleList()" [attr.aria-expanded]="isExpanded">
+                  <!-- Open: "text-indigo-600", Closed: "text-gray-900" -->
+                  <span class="text-sm font-medium text-gray-900">Features</span>
+                  <span class="ml-6 flex items-center">
+        <!-- Plus icon when closed -->
+        <svg *ngIf="!isExpanded" class="block h-6 w-6 text-gray-400 group-hover:text-gray-500" fill="none"
+             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15"/>
+        </svg>
+                    <!-- Minus icon when open -->
+        <svg *ngIf="isExpanded" class="block h-6 w-6 text-indigo-400 group-hover:text-indigo-500" fill="none"
+             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12h-15"/>
+        </svg>
+      </span>
+                </button>
+              </h3>
+
+              <!-- The transitioning section -->
+              <div [ngClass]="{ 'max-h-0': !isExpanded, 'max-h-[100rem]': isExpanded }"
+                   class="transition-all duration-500 ease-in-out overflow-hidden max-h-0" id="disclosure-1">
+                <ul role="list" class="p-0 m-0">
+                  <li>Multiple strap configurations</li>
+                  <li>Spacious interior with top zip</li>
+                  <li>Leather handle and tabs</li>
+                  <li>Interior dividers</li>
+                  <li>Stainless strap loops</li>
+                  <li>Double stitched construction</li>
+                  <li>Water-resistant</li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- More sections... -->
+          </div>
+        </section>
+      </div>
     </div>
   </div>
 </div>
+
