--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -22,20 +22,11 @@
                   <p class="mt-1 text-sm font-medium text-gray-900">$ {{ item.price }}</p>
                 </div>
 
-                <div class="mt-4 sm:mt-0 sm:pr-9">
-                  <label class="sr-only">Quantity, {{ item.productName }}</label>
-                  <select [(ngModel)]="item.quantity" (change)="updateItem(item)" name="quantity-{{i}}" class="max-w-full rounded-md border border-gray-300 p-1.5 text-left text-base font-medium leading-5 text-gray-700 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500 sm:text-sm">
-                    <option *ngFor="let quantity of quantities" [value]="quantity">{{ quantity }}</option>
-                  </select>
-
-                  <div class="absolute right-0 top-0">
-                    <button type="button" (click)="removeItem(item.productId)" class="-m-2 inline-flex p-2 text-red-400 hover:text-red-500">
-                      <span class="sr-only">Remove</span>
-                      <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z" />
-                      </svg>
-                    </button>
-                  </div>
+                <div class="flex flex-row lg:items-center">
+                  <button (click)="decrementQuantity(item)" class="border px-2 py-1">-</button>
+                  <span class="px-4 mt-1.5 lg:m-0 text-black">{{ item.quantity }}</span>
+                  <button (click)="incrementQuantity(item)" class="border px-2 py-1">+</button>
+                  <button (click)="removeItem(item.productId)" class="ml-4 text-red-500">x</button>
                 </div>
               </div>
             </div>
