Changed a href to a routerLink, added 404 page

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -15,9 +15,7 @@
               <div class="relative pr-9 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:pr-0">
                 <div>
                   <div class="flex justify-between">
-                    <h3 class="text-sm">
-                      <a href="#" class="font-medium text-gray-700 hover:text-gray-800">{{ item.productName }}</a>
-                    </h3>
+                    <h3 class="text-sm font-medium text-gray-700 hover:text-gray-800">{{ item.productName }}</h3>
                   </div>
                   <p class="mt-1 text-sm font-medium text-gray-900">$ {{ item.price }}</p>
                 </div>
