--- a/src/app/components/thankyou/thankyou.component.html
+++ b/src/app/components/thankyou/thankyou.component.html
@@ -5,6 +5,6 @@
     Your order has been placed successfully. We appreciate your business and hope you enjoy your new artwork.
   </p>
   <div>
-    <a href="" class="w-full block bg-gray-500 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Back to cart</a>
+    <a routerLink="/home" class="w-full block bg-gray-500 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Back to home</a>
   </div>
 </div>
