--- a/src/app/components/admin-panel/sidebar/sidebar.component.html
+++ b/src/app/components/admin-panel/sidebar/sidebar.component.html
@@ -1,28 +1,28 @@
 <aside class="fixed inset-y-0 left-0 z-10 w-14 flex flex-col items-center bg-white text-black border-r border-gray-200">
   <nav class="flex flex-col items-center gap-4 px-2 py-4">
-    <a href="admin/dashboard" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
+    <a routerLink="admin/dashboard" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
       <span class="material-icons">home</span>
       <span class="absolute left-12 opacity-0 group-hover:opacity-100 transition-opacity bg-gray-800 text-white text-xs px-2 py-1 rounded">Dashboard</span>
     </a>
-    <a href="/admin/orders" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
+    <a routerLink="/admin/orders" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
       <span class="material-icons">shopping_cart</span>
       <span class="absolute left-12 opacity-0 group-hover:opacity-100 transition-opacity bg-gray-800 text-white text-xs px-2 py-1 rounded">Zamówienia</span>
     </a>
-    <a href="/admin/products" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
+    <a routerLink="/admin/products" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
       <span class="material-icons">inventory</span>
       <span class="absolute left-12 opacity-0 group-hover:opacity-100 transition-opacity bg-gray-800 text-white text-xs px-2 py-1 rounded">Produkty</span>
     </a>
-    <a href="/admin/customers" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
+    <a routerLink="/admin/customers" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
       <span class="material-icons">people</span>
       <span class="absolute left-12 opacity-0 group-hover:opacity-100 transition-opacity bg-gray-800 text-white text-xs px-2 py-1 rounded">Klienci</span>
     </a>
-    <a href="admin/codes" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
+    <a routerLink="admin/codes" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
       <span class="material-icons">card_giftcard</span>
       <span class="absolute left-12 opacity-0 group-hover:opacity-100 transition-opacity bg-gray-800 text-white text-xs px-2 py-1 rounded">Kody zniżkowe</span>
     </a>
   </nav>
   <nav class="mt-auto flex flex-col items-center gap-4 px-2 py-4">
-    <a href="#" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
+    <a routerLink="/home" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
       <span class="material-icons">arrow_back</span>
       <span class="absolute left-12 opacity-0 group-hover:opacity-100 transition-opacity bg-gray-800 text-white text-xs px-2 py-1 rounded">Powrót na strone główna</span>
     </a>
