--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,7 +1,7 @@
 <app-stepper></app-stepper>
 <div class="">
   <div class="mx-auto max-w-2xl px-4 pb-24 pt-16 sm:px-6 lg:max-w-7xl lg:px-8 bg-gray-50 border-gray-200 border-2 rounded-md">
-    <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl text-center mb-8 ">Shopping Cart</h1>
+    <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl text-center mb-8 ">Checkout</h1>
 
     <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()" class="lg:grid lg:grid-cols-2 lg:gap-x-12 xl:gap-x-16">
       <div>
