--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -32,7 +32,7 @@
           </div>
         </li>
         <li>
-          <a href="/gallery" class="nav-link text-gray-700 hover:text-gray-900 text-2xl" routerLink="/gallery">Gallery</a>
+          <a routerLink="/gallery" class="nav-link text-gray-700 hover:text-gray-900 text-2xl" routerLink="/gallery">Gallery</a>
         </li>
         <li class="relative flex items-center">
           <a class="nav-link text-gray-700 hover:text-gray-900 text-2xl" routerLink="/cart">Cart</a>
@@ -49,10 +49,10 @@
     <!-- Mobile Menu -->
     <div class="dropdown-menu" [class.hidden]="!menuOpen" [ngStyle]="{ 'display': menuOpen ? 'block' : 'none' }">
       <ul class="flex flex-col items-center space-y-2 p-4">
-        <li><a href="/shop" class="text-gray-700 hover:text-gray-900 text-xl transition" (click)="navigateWithFilters('')">Shop</a></li>
-        <li><a href="/bio" class="text-gray-700 hover:text-gray-900 text-xl transition" routerLink="/bio">Bio</a></li>
-        <li><a href="/exhibitions" class="text-gray-700 hover:text-gray-900 text-xl transition" routerLink="/exhibitions">Exhibitions</a></li>
-        <li><a href="/contact" class="text-gray-700 hover:text-gray-900 text-xl transition" routerLink="/contact">Contact</a></li>
+        <li><a routerLink="/shop" class="text-gray-700 hover:text-gray-900 text-xl transition" (click)="navigateWithFilters('')">Shop</a></li>
+        <li><a routerLink="/bio" class="text-gray-700 hover:text-gray-900 text-xl transition" routerLink="/bio">Bio</a></li>
+        <li><a routerLink="/exhibitions" class="text-gray-700 hover:text-gray-900 text-xl transition" routerLink="/exhibitions">Exhibitions</a></li>
+        <li><a routerLink="/contact" class="text-gray-700 hover:text-gray-900 text-xl transition" routerLink="/contact">Contact</a></li>
         <li class="relative flex items-center">
           <a class="nav-link text-gray-700 hover:text-gray-900 text-xl transition" routerLink="/cart">Cart</a>
           <span *ngIf="cartItemCount > 0" class="cart-item-count text-l">{{ cartItemCount }}</span>
