--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -28,7 +28,7 @@
           <div class="dropdown-menu absolute hidden group-hover:block bg-white shadow-lg mt-2 rounded w-56 transition">
             <a class="block px-6 py-3 text-gray-700 hover:bg-gray-200 text-xl transition border-b" routerLink="/bio">Bio</a>
             <a class="block px-6 py-3 text-gray-700 hover:bg-gray-200 text-xl transition border-b" routerLink="/exhibitions">Exhibitions</a>
-            <a class="block px-6 py-3 text-gray-700 hover:bg-gray-200 text-xl transition border-b" routerLink="/contact">Contact</a>
+            <a class="block px-6 py-3 text-gray-700 hover:bg-gray-200 text-xl transition" routerLink="/contact">Contact</a>
           </div>
         </li>
         <li>
