implementation of discountCode table

--- a/src/app/components/admin-panel/sidebar/sidebar.component.html
+++ b/src/app/components/admin-panel/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
       <span class="material-icons">people</span>
       <span class="absolute left-12 opacity-0 group-hover:opacity-100 transition-opacity bg-gray-800 text-white text-xs px-2 py-1 rounded">Klienci</span>
     </a>
-    <a routerLink="admin/codes" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
+    <a routerLink="/admin/discountcodes" class="group flex h-9 w-9 items-center justify-center rounded-lg text-muted-foreground transition-colors hover:text-foreground md:h-8 md:w-8">
       <span class="material-icons">card_giftcard</span>
       <span class="absolute left-12 opacity-0 group-hover:opacity-100 transition-opacity bg-gray-800 text-white text-xs px-2 py-1 rounded">Kody zniżkowe</span>
     </a>
